--- a/tinker/templates/creative_tim_base.html
+++ b/tinker/templates/creative_tim_base.html
@@ -9,8 +9,8 @@
     <head>
         {% block head %}
             <meta charset="utf-8"/>
-            <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/apple-icon.png">
-            <link rel="icon" type="image/png" sizes="96x96" href="/static/assets/img/favicon.ico">
+            <link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static', filename='assets/img/apple-icon.png') }}">
+            <link rel="icon" type="image/png" sizes="96x96" href="{{ url_for('static', filename='assets/img/favicon.ico') }}">
             <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
             <title>{% block title %}{{ title }}{% endblock %}</title>
@@ -28,7 +28,7 @@
             <link href="https://cdn3.bethel.edu/tinker/css/paper-dashboard.css" rel="stylesheet"/>
 
             <!-- Tinker's specific core CSS -->
-            <link href="/static/assets/css/tinker.css" rel="stylesheet"/>
+            <link href="{{ url_for('static', filename='assets/css/tinker.css') }}" rel="stylesheet"/>
 
 
             <!--  Fonts and icons     -->
