--- a/tinker/templates/events/in-workflow.html
+++ b/tinker/templates/events/in-workflow.html
@@ -15,7 +15,7 @@
                 </h3>
 
                 <p>Your edits are pending approval. Please wait until they have been approved before you make additional
-                    edits. Go back to your <a href="{{ url_for('events.EventsView:index') }}">events</a>.</p>
+                    edits. Go back to your <a href="{{ url_for('EventsView:index') }}">events</a>.</p>
 
             </div>
         </div>
