--- a/tinker/templates/faculty-bios/in-workflow.html
+++ b/tinker/templates/faculty-bios/in-workflow.html
@@ -16,7 +16,7 @@
 
                 <p>You recently made edits to your bio and are currently pending approval. Please wait until the changes
                     have been approved before you make additional edits. Go back to your <a
-                            href="{{ url_for('faculty_bios.FacultyBiosView:index') }}">faculty bios</a>.</p>
+                            href="{{ url_for('FacultyBiosView:index') }}">faculty bios</a>.</p>
 
 
             </div>
