--- a/tinker/templates/index.html
+++ b/tinker/templates/index.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="content">
                         <div class="icon-big icon-warning text-center">
-                            <a href="{{ url_for('events.EventsView:index') }}">
+                            <a href="{{ url_for('EventsView:index') }}">
                                 <i class="fa fa-calendar fa-4x" aria-hidden="true" style='width:100%'></i>
                             </a>
                         </div>
@@ -26,7 +26,7 @@
                     </div>
                     <div class="content">
                         <div class="icon-big icon-warning text-center">
-                            <a href="{{ url_for('e_announcements.EAnnouncementsView:index') }}">
+                            <a href="{{ url_for('EAnnouncementsView:index') }}">
                                 <i class="fa fa-envelope-o fa-4x" aria-hidden="true" style='width:100%'></i>
                             </a>
                         </div>
@@ -43,7 +43,7 @@
                         </div>
                         <div class="content">
                             <div class="icon-big icon-warning text-center">
-                                <a href="{{ url_for('faculty_bios.FacultyBiosView:index') }}">
+                                <a href="{{ url_for('FacultyBiosView:index') }}">
                                     <i class="fa fa-user fa-4x" aria-hidden="true" style='width:100%'></i>
                                 </a>
                             </div>
@@ -60,7 +60,7 @@
                         </div>
                         <div class="content">
                             <div class="icon-big icon-warning text-center">
-                                <a href="{{ url_for('redirects.RedirectsView:index') }}">
+                                <a href="{{ url_for('RedirectsView:index') }}">
                                     <i class="fa fa-arrows-alt fa-4x" aria-hidden="true" style='width:100%'></i>
                                 </a>
                             </div>
