--- a/tinker/templates/office-hours/home.html
+++ b/tinker/templates/office-hours/home.html
@@ -26,7 +26,7 @@
                                     <p>{{ form.title }}</p>
                                 </div>
                                 <div class="large-6 columns small-3">
-                                    <a href="{{ url_for('office_hours.OfficeHoursView:edit', block_id=form.id) }}"
+                                    <a href="{{ url_for('OfficeHoursView:edit', block_id=form.id) }}"
                                        class="btn btn-primary">Edit</a></li>
                                 </div>
                                 <hr/>
