--- a/tinker/templates/admin/user-roles/home.html
+++ b/tinker/templates/admin/user-roles/home.html
@@ -27,7 +27,7 @@
             $('.admin-viewer').click(function(){
                     var username = $('#username').val();
                 console.log(username)
-                $.post('{{ url_for('user_roles.UserRolesView:test_roles_and_users_submit') }}', {'username': username }, function (data) {
+                $.post('{{ url_for('UserRolesView:test_roles_and_users_submit') }}', {'username': username }, function (data) {
 {#                    alert(data);#}
                     if( data == 'error'){
                         alert('Error: Contact Web Services for further assistance');
@@ -38,7 +38,7 @@
             });
             $('#clear-session').click(function(){
                 console.log('click');
-                $.post('{{ url_for('user_roles.UserRolesView:session_clear') }}', function() {
+                $.post('{{ url_for('UserRolesView:session_clear') }}', function() {
                     alert('session cleared');
                     window.location.href = '/';
                 })
