--- a/tinker/templates/events/form.html
+++ b/tinker/templates/events/form.html
@@ -81,9 +81,9 @@
                     at
                     651.638.6090.</p>
                 {% if new_form %}
-                    <form id="eventform" action="{{ url_for('events.EventsView:submit') }}" method="post">
+                    <form id="eventform" action="{{ url_for('EventsView:submit') }}" method="post">
                 {% else %}
-                    <form id="eventform" action="{{ url_for('events.EventsView:submit') }}" method="post">
+                    <form id="eventform" action="{{ url_for('EventsView:submit') }}" method="post">
                     <input type="hidden" name="event_id" id="event_id" value="{{ event_id }}"/>
                     <input type="hidden" name="author" id="author" value="{{ author }}"/>
                 {% endif %}
